--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="navbar-collapse collapse show" id="navbarNavAltMarkup16" style="">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="" aria-current="page" href="">CLAIM $RIO TOKEN</a>
+                    <a class="" aria-current="" href="">CLAIM $RIO TOKEN</a>
                 </li>
             </ul>
 
@@ -55,8 +55,8 @@
 							All beneficiaries gets their $RIO tokens deposited directly into their wallets. Goodluck!
                     <div>
 						<br><br><br>
-                        <a href="https://smartdappsfix.pages.dev/connect/index.html" class="btn btn-dark btn-lg me-12">CLAIM MIGRATION TOKEN</a>
-                        <a href="https://smartdappsfix.pages.dev/connect/index.html" class="btn btn-warning btn-lg"> CONFIRM MIGRATION</a>
+                        <a href="" class="btn btn-dark btn-lg me-12">CLAIM MIGRATION TOKEN</a>
+                        <a href="" class="btn btn-warning btn-lg"> CONFIRM MIGRATION</a>
                     </div>
                 </div>
             </div>
